	Added new textcolor options that enables you to specify the colors you want to display. Contributed by Jennifer Arsenault.
	Added new external file support for link_list and image_list options. The file format is a simple JSON file.
	Added new "both" mode for the resize option. Enables resizing in both width and height.
	Fixed so font name, font size and block format select boxes gets updated with the current format.
	Fixed so the resizeTo/resizeBy methods for the theme are exposed as it as in 3.x.
	Fixed so the textcolor controls are splitbuttons as in 3.x. Patch contributed by toxalot/jashua212.
	Fixed bug where the theme content css wasn't loaded into the preview dialog.
	Fixed bug where the template description in template dialog wouldn't display the text correctly.
	Fixed bug where various UI elements wasn't properly removed when an editor instance was removed.
	Fixed bug where editing links in inline mode would fail on WebKit.
	Fixed bug where the pagebreak_separator option in the pagebreak plugin wasn't working properly.
	Fixed bug where the child panels of the float panel in inline mode wasn't properly placed.
	Fixed bug where the float panel children of windows wasn't position fixed.
	Fixed bug where the size of the ok button was hardcoded, caused issues with i18n.
	Fixed bug where single comment in editor would cause exceptions due to resolve path logic not detecting elements only.
	Fixed bug where switching alignment of tables in dialogs wouldn't properly remove existing alignments.
	Fixed bug where the table properties dialog would show columns/rows textboxes.
	Fixed bug where jQuery wasn't used instead of Sizzle in the jQuery version of TinyMCE.
	Fixed bug where setting resize option to false whouldn't properly render the word count.
	Fixed bug where table row type change would produce multiple table section elements.
	Fixed bug where table row type change on multiple rows would add them in incorrect order.