@@ -47,12 +47,19 @@ define("tinymce/pasteplugin/Clipboard", [
 		function processHtml(html) {
 			var args = editor.fire('PastePreProcess', {content: html});
 
-			if (editor.settings.paste_remove_styles || (editor.settings.paste_remove_styles_if_webkit !== false && Env.webkit)) {
-				args.content = args.content.replace(/ style=\"[^\"]+\"/g, '');
+			// Remove all data images from paste for example from Gecko
+			if (!editor.settings.paste_data_images) {
+				html = html.replace(/<img src=\"data:image[^>]+>/g, '');
 			}
 
+			if (editor.settings.paste_remove_styles || (editor.settings.paste_remove_styles_if_webkit !== false && Env.webkit)) {
+				html = html.replace(/ style=\"[^\"]+\"/g, '');
+			}
+
+			args.content = html;
+
 			if (!args.isDefaultPrevented()) {
-				editor.insertContent(args.content);
+				editor.insertContent(html);
 			}
 		}
 
